# aoc-2024

./: aoc.cabal  package.yaml
src/: Day1.hs  Day2.hs
test/: Day1Spec.hs  Day2Spec.hs
