cabal-version: 3.0

name:           aoc
version:        0.1.0
author:         Joshua Bassett <hello@joshbassett.info>
maintainer:     Joshua Bassett <hello@joshbassett.info>
copyright:      2024 Joshua Bassett 
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nullobject/aoc-2024

library
  exposed-modules:
      Day1
    , Day2
  other-modules:
      Paths_aoc
  autogen-modules:
      Paths_aoc
  hs-source-dirs:
      src
  ghc-options: -Wall -Wno-name-shadowing
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec
    , range
    , split
    , text
  default-language: Haskell2010

executable main
  main-is: Main.hs
  other-modules:
      Paths_aoc
  autogen-modules:
      Paths_aoc
  hs-source-dirs:
      bin
  ghc-options: -Wall -Wno-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc
    , base >=4.7 && <5
    , containers
    , megaparsec
    , range
    , split
    , text
  default-language: Haskell2010

test-suite aoc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Day1Spec
      Paths_aoc
  autogen-modules:
      Paths_aoc
  hs-source-dirs:
      test
  ghc-options: -Wall -Wno-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc
    , base >=4.7 && <5
    , containers
    , hspec
    , hspec-megaparsec
    , megaparsec
    , range
    , split
    , text
  build-tool-depends:
      hspec-discover:hspec-discover
  default-language: Haskell2010
